--- a/Days/Days/Interfaces/ToolViews/Cards/Base/Chart/未命名文件夹/CardChartView.xib
+++ b/Days/Days/Interfaces/ToolViews/Cards/Base/Chart/未命名文件夹/CardChartView.xib
@@ -5,69 +5,17 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CardChartView" customModule="Days" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CardChartView" customModule="Days" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="310"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="djR-GV-44q">
-                    <rect key="frame" x="20" y="90" width="335" height="160"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="b2C-za-WMR">
-                        <size key="itemSize" width="50" height="50"/>
-                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    </collectionViewFlowLayout>
-                </collectionView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VdR-4B-DMG">
-                    <rect key="frame" x="0.0" y="250" width="375" height="60"/>
-                    <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="alx-G1-Wup">
-                            <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="60" id="3Yx-yd-VhC"/>
-                                <constraint firstAttribute="width" constant="60" id="vP1-yj-p93"/>
-                            </constraints>
-                            <state key="normal" title="&lt;" image="but_last"/>
-                            <connections>
-                                <action selector="last_date_action:" destination="iN0-l3-epB" eventType="touchUpInside" id="bH6-eR-3Ba"/>
-                            </connections>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DD0-Ob-1Dz">
-                            <rect key="frame" x="315" y="0.0" width="60" height="60"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="60" id="GAd-yS-AZy"/>
-                                <constraint firstAttribute="width" constant="60" id="aDh-3s-ZHY"/>
-                            </constraints>
-                            <state key="normal" title="&gt;" image="but_next"/>
-                            <connections>
-                                <action selector="next_date_action:" destination="iN0-l3-epB" eventType="touchUpInside" id="Kr1-Iu-gcY"/>
-                            </connections>
-                        </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2018.01.01 - 2018.02.01" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cse-Zb-nQl">
-                            <rect key="frame" x="110" y="20" width="154" height="20"/>
-                            <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
-                            <color key="textColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstItem="alx-G1-Wup" firstAttribute="leading" secondItem="VdR-4B-DMG" secondAttribute="leading" id="IOe-9u-wIf"/>
-                        <constraint firstItem="Cse-Zb-nQl" firstAttribute="centerX" secondItem="VdR-4B-DMG" secondAttribute="centerX" id="Oof-Bc-LxR"/>
-                        <constraint firstAttribute="height" constant="60" id="YTZ-rU-UbB"/>
-                        <constraint firstItem="DD0-Ob-1Dz" firstAttribute="centerY" secondItem="VdR-4B-DMG" secondAttribute="centerY" id="eu1-Pi-dHR"/>
-                        <constraint firstItem="Cse-Zb-nQl" firstAttribute="centerY" secondItem="VdR-4B-DMG" secondAttribute="centerY" id="qOM-Kr-Tts"/>
-                        <constraint firstAttribute="trailing" secondItem="DD0-Ob-1Dz" secondAttribute="trailing" id="umk-rc-RLF"/>
-                        <constraint firstItem="alx-G1-Wup" firstAttribute="centerY" secondItem="VdR-4B-DMG" secondAttribute="centerY" id="whb-Ff-nUO"/>
-                    </constraints>
-                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C6u-k3-Qb0">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="90"/>
                     <subviews>
@@ -88,9 +36,6 @@
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QGD-tB-eRK">
                             <rect key="frame" x="20" y="10" width="267" height="70"/>
-                            <connections>
-                                <action selector="edit_action:" destination="iN0-l3-epB" eventType="touchUpInside" id="U2A-5h-8bO"/>
-                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="85T-Lc-0GF">
                             <rect key="frame" x="295" y="15" width="60" height="60"/>
@@ -99,9 +44,6 @@
                                 <constraint firstAttribute="height" constant="60" id="DGE-Sc-0uP"/>
                             </constraints>
                             <state key="normal" image="nav_add"/>
-                            <connections>
-                                <action selector="log_action:" destination="iN0-l3-epB" eventType="touchUpInside" id="dk1-iX-Dde"/>
-                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -121,14 +63,64 @@
                         <constraint firstItem="iBJ-Fp-t4v" firstAttribute="leading" secondItem="C6u-k3-Qb0" secondAttribute="leading" constant="20" id="pjG-uV-rF5"/>
                     </constraints>
                 </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VdR-4B-DMG">
+                    <rect key="frame" x="0.0" y="250" width="375" height="60"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="alx-G1-Wup">
+                            <rect key="frame" x="20" y="0.0" width="60" height="60"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="60" id="3Yx-yd-VhC"/>
+                                <constraint firstAttribute="width" constant="60" id="vP1-yj-p93"/>
+                            </constraints>
+                            <state key="normal" title="&lt;" image="but_last"/>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DD0-Ob-1Dz">
+                            <rect key="frame" x="295" y="0.0" width="60" height="60"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="60" id="GAd-yS-AZy"/>
+                                <constraint firstAttribute="width" constant="60" id="aDh-3s-ZHY"/>
+                            </constraints>
+                            <state key="normal" title="&gt;" image="but_next"/>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2018.01.01 - 2018.02.01" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cse-Zb-nQl">
+                            <rect key="frame" x="110" y="20" width="154" height="20"/>
+                            <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
+                            <color key="textColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="alx-G1-Wup" firstAttribute="leading" secondItem="VdR-4B-DMG" secondAttribute="leading" constant="20" id="IOe-9u-wIf"/>
+                        <constraint firstItem="Cse-Zb-nQl" firstAttribute="centerX" secondItem="VdR-4B-DMG" secondAttribute="centerX" id="Oof-Bc-LxR"/>
+                        <constraint firstAttribute="height" constant="60" id="YTZ-rU-UbB"/>
+                        <constraint firstItem="DD0-Ob-1Dz" firstAttribute="centerY" secondItem="VdR-4B-DMG" secondAttribute="centerY" id="eu1-Pi-dHR"/>
+                        <constraint firstItem="Cse-Zb-nQl" firstAttribute="centerY" secondItem="VdR-4B-DMG" secondAttribute="centerY" id="qOM-Kr-Tts"/>
+                        <constraint firstAttribute="trailing" secondItem="DD0-Ob-1Dz" secondAttribute="trailing" constant="20" id="umk-rc-RLF"/>
+                        <constraint firstItem="alx-G1-Wup" firstAttribute="centerY" secondItem="VdR-4B-DMG" secondAttribute="centerY" id="whb-Ff-nUO"/>
+                    </constraints>
+                </view>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="djR-GV-44q">
+                    <rect key="frame" x="20" y="90" width="335" height="160"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="160" id="iy5-a7-tBf"/>
+                    </constraints>
+                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="b2C-za-WMR">
+                        <size key="itemSize" width="50" height="50"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_chart_goal" translatesAutoresizingMaskIntoConstraints="NO" id="3sc-4n-na6">
-                    <rect key="frame" x="0.0" y="150" width="375" height="40"/>
+                    <rect key="frame" x="0.0" y="117" width="375" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="dXw-Lg-g8y"/>
                     </constraints>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ErY-SR-9p9" customClass="View" customModule="Days" customModuleProvider="target">
-                    <rect key="frame" x="2" y="159.5" width="38.5" height="20"/>
+                    <rect key="frame" x="2" y="126.5" width="38.5" height="20"/>
                     <color key="backgroundColor" red="0.60784313729999995" green="0.60784313729999995" blue="0.60784313729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="m0Q-J7-LVM"/>
@@ -140,7 +132,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aCG-BP-NMc">
-                    <rect key="frame" x="10" y="159.5" width="22.5" height="20"/>
+                    <rect key="frame" x="10" y="126.5" width="22.5" height="20"/>
                     <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
                     <color key="textColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
@@ -158,27 +150,16 @@
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="C6u-k3-Qb0" secondAttribute="trailing" id="UUq-cF-HbY"/>
                 <constraint firstItem="aCG-BP-NMc" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="WtL-ZP-a3v"/>
                 <constraint firstItem="ErY-SR-9p9" firstAttribute="centerY" secondItem="aCG-BP-NMc" secondAttribute="centerY" id="cor-fk-pn1"/>
-                <constraint firstItem="VdR-4B-DMG" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="dfC-7i-o9W"/>
                 <constraint firstItem="ErY-SR-9p9" firstAttribute="trailing" secondItem="aCG-BP-NMc" secondAttribute="trailing" constant="8" id="fMi-wY-E6T"/>
                 <constraint firstItem="ErY-SR-9p9" firstAttribute="leading" secondItem="aCG-BP-NMc" secondAttribute="leading" constant="-8" id="gXj-mS-jig"/>
                 <constraint firstItem="djR-GV-44q" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="h8V-WT-JrN"/>
                 <constraint firstItem="3sc-4n-na6" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="jXJ-jH-O7o"/>
                 <constraint firstItem="VdR-4B-DMG" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="p32-qC-d9O"/>
-                <constraint firstItem="3sc-4n-na6" firstAttribute="centerY" secondItem="djR-GV-44q" secondAttribute="centerY" id="rxk-QI-Bl2"/>
+                <constraint firstItem="djR-GV-44q" firstAttribute="bottom" secondItem="3sc-4n-na6" secondAttribute="centerY" constant="113" id="rxk-QI-Bl2"/>
                 <constraint firstItem="VdR-4B-DMG" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="sst-qy-9g7"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <connections>
-                <outlet property="collection" destination="djR-GV-44q" id="z7L-Yl-wIP"/>
-                <outlet property="date_label" destination="Cse-Zb-nQl" id="QFd-bH-BV0"/>
-                <outlet property="goal_image" destination="3sc-4n-na6" id="eYX-af-DGc"/>
-                <outlet property="goal_label" destination="aCG-BP-NMc" id="Mjj-uO-8RX"/>
-                <outlet property="goal_layout" destination="rxk-QI-Bl2" id="qfY-pX-TaD"/>
-                <outlet property="name_label" destination="E6F-3q-1hf" id="9EG-f1-d74"/>
-                <outlet property="navigation_layout" destination="4yu-O8-gsL" id="kOb-GX-iar"/>
-                <outlet property="note_label" destination="iBJ-Fp-t4v" id="t2M-Uk-eZu"/>
-            </connections>
             <point key="canvasLocation" x="33.5" y="185.5"/>
         </view>
     </objects>
