--- a/Days/Days/Interfaces/ToolViews/Cards/Base/Date/CardDateView.xib
+++ b/Days/Days/Interfaces/ToolViews/Cards/Base/Date/CardDateView.xib
@@ -14,7 +14,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CalendarCollection" customModule="Days" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clipsSubviews="YES" contentMode="scaleToFill" id="CRK-7u-sFT" customClass="CardDateView" customModule="Days" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="406"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zZ7-HS-UMm">
@@ -128,61 +128,7 @@
                                 <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                 <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                             </collectionViewFlowLayout>
-                            <cells>
-                                <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="fKo-XY-7J6" customClass="CalendarCollectionCell" customModule="Days" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                        <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <subviews>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b8n-12-2Xs" customClass="View" customModule="Days" customModuleProvider="target">
-                                                <rect key="frame" x="1" y="1" width="58" height="58"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <userDefinedRuntimeAttributes>
-                                                    <userDefinedRuntimeAttribute type="number" keyPath="corner">
-                                                        <real key="value" value="4"/>
-                                                    </userDefinedRuntimeAttribute>
-                                                </userDefinedRuntimeAttributes>
-                                            </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Bz-dd-irI" customClass="View" customModule="Days" customModuleProvider="target">
-                                                <rect key="frame" x="15.5" y="42.5" width="30" height="2"/>
-                                                <color key="backgroundColor" red="0.60784313729999995" green="0.60784313729999995" blue="0.60784313729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="2" id="GCv-C4-xcr"/>
-                                                </constraints>
-                                                <userDefinedRuntimeAttributes>
-                                                    <userDefinedRuntimeAttribute type="number" keyPath="corner">
-                                                        <real key="value" value="1"/>
-                                                    </userDefinedRuntimeAttribute>
-                                                </userDefinedRuntimeAttributes>
-                                            </view>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xWn-m4-JHY">
-                                                <rect key="frame" x="21" y="19.5" width="18" height="21"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                    </view>
-                                    <constraints>
-                                        <constraint firstAttribute="trailing" secondItem="b8n-12-2Xs" secondAttribute="trailing" constant="1" id="38o-UH-esV"/>
-                                        <constraint firstItem="1Bz-dd-irI" firstAttribute="top" secondItem="xWn-m4-JHY" secondAttribute="bottom" constant="2" id="69s-20-256"/>
-                                        <constraint firstItem="b8n-12-2Xs" firstAttribute="leading" secondItem="fKo-XY-7J6" secondAttribute="leading" constant="1" id="DdJ-Xs-EMk"/>
-                                        <constraint firstItem="1Bz-dd-irI" firstAttribute="width" secondItem="fKo-XY-7J6" secondAttribute="width" multiplier="0.5" id="V3Y-8t-O1Z"/>
-                                        <constraint firstItem="xWn-m4-JHY" firstAttribute="centerX" secondItem="fKo-XY-7J6" secondAttribute="centerX" id="VxO-O6-GsM"/>
-                                        <constraint firstAttribute="bottom" secondItem="b8n-12-2Xs" secondAttribute="bottom" constant="1" id="jSx-5r-gTT"/>
-                                        <constraint firstItem="1Bz-dd-irI" firstAttribute="centerX" secondItem="xWn-m4-JHY" secondAttribute="centerX" id="jaK-a1-EQs"/>
-                                        <constraint firstItem="xWn-m4-JHY" firstAttribute="centerY" secondItem="fKo-XY-7J6" secondAttribute="centerY" id="sTE-pu-Kp9"/>
-                                        <constraint firstItem="b8n-12-2Xs" firstAttribute="top" secondItem="fKo-XY-7J6" secondAttribute="top" constant="1" id="vID-po-cMR"/>
-                                    </constraints>
-                                    <connections>
-                                        <outlet property="back" destination="b8n-12-2Xs" id="hlh-bR-6qU"/>
-                                        <outlet property="day" destination="xWn-m4-JHY" id="cLo-fs-gGF"/>
-                                        <outlet property="select" destination="1Bz-dd-irI" id="OaU-gh-DUY"/>
-                                    </connections>
-                                </collectionViewCell>
-                            </cells>
+                            <cells/>
                             <connections>
                                 <outlet property="dataSource" destination="EeQ-f1-hT3" id="Ul7-gS-VpV"/>
                                 <outlet property="delegate" destination="EeQ-f1-hT3" id="SpJ-Mi-ThD"/>
@@ -226,7 +172,7 @@
                 <outlet property="change_button" destination="nE0-4J-uO7" id="Slf-pB-CcN"/>
                 <outlet property="date_button" destination="zZ7-HS-UMm" id="PdO-tf-92R"/>
             </connections>
-            <point key="canvasLocation" x="845.5" y="-14"/>
+            <point key="canvasLocation" x="845.5" y="-190"/>
         </view>
     </objects>
     <resources>
