--- a/Days/Days/Interfaces/ToolViews/Hint/HintView.xib
+++ b/Days/Days/Interfaces/ToolViews/Hint/HintView.xib
@@ -5,7 +5,6 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,19 +12,22 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="HintView" customModule="Days" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="333" height="249"/>
+            <rect key="frame" x="0.0" y="0.0" width="333" height="298"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="800" text="删除习惯" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yvr-1C-71T">
-                    <rect key="frame" x="114" y="20" width="105" height="37"/>
+                    <rect key="frame" x="20" y="20" width="105" height="37"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="37" id="S2F-qa-Dai"/>
+                    </constraints>
                     <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="26"/>
                     <color key="textColor" red="0.1176470588" green="0.1176470588" blue="0.1176470588" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vbz-aq-1oD" customClass="Button" customModule="Days" customModuleProvider="target">
-                    <rect key="frame" x="176.5" y="189" width="146.5" height="40"/>
+                    <rect key="frame" x="176.5" y="218" width="136.5" height="60"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="40" id="NK6-aY-P4l"/>
+                        <constraint firstAttribute="height" constant="60" id="NK6-aY-P4l"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="20"/>
                     <state key="normal" title="取消">
@@ -33,7 +35,7 @@
                     </state>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="color" keyPath="normal_color">
-                            <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="value" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
                         </userDefinedRuntimeAttribute>
                         <userDefinedRuntimeAttribute type="number" keyPath="corner">
                             <real key="value" value="10"/>
@@ -44,9 +46,9 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s5f-VL-M45" customClass="Button" customModule="Days" customModuleProvider="target">
-                    <rect key="frame" x="10" y="189" width="146.5" height="40"/>
+                    <rect key="frame" x="20" y="218" width="136.5" height="60"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="40" id="UeT-zY-r07"/>
+                        <constraint firstAttribute="height" constant="60" id="UeT-zY-r07"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="PingFangSC-Semibold" family="PingFang SC" pointSize="20"/>
                     <state key="normal" title="确认">
@@ -54,7 +56,7 @@
                     </state>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="color" keyPath="normal_color">
-                            <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="value" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
                         </userDefinedRuntimeAttribute>
                         <userDefinedRuntimeAttribute type="number" keyPath="corner">
                             <real key="value" value="10"/>
@@ -64,26 +66,43 @@
                         <action selector="sure_action:" destination="iN0-l3-epB" eventType="touchUpInside" id="uge-99-qod"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="删除 XXX 将抹除所有相关数据，不可恢复。是否确认删除？" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E6v-Es-9fa">
-                    <rect key="frame" x="20" y="77" width="293" height="92"/>
-                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="20"/>
-                    <color key="textColor" red="1" green="0.38418834860000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ovH-G4-5hP" customClass="View" customModule="Days" customModuleProvider="target">
+                    <rect key="frame" x="20" y="77" width="293" height="121"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="删除 XXX 将抹除所有相关数据，不可恢复。是否确认删除？" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E6v-Es-9fa">
+                            <rect key="frame" x="20" y="10" width="253" height="101"/>
+                            <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="20"/>
+                            <color key="textColor" red="1" green="0.30196078431372547" blue="0.38823529411764707" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="E6v-Es-9fa" secondAttribute="trailing" constant="20" id="dqz-vB-MCT"/>
+                        <constraint firstItem="E6v-Es-9fa" firstAttribute="leading" secondItem="ovH-G4-5hP" secondAttribute="leading" constant="20" id="ekV-20-qwc"/>
+                        <constraint firstItem="E6v-Es-9fa" firstAttribute="top" secondItem="ovH-G4-5hP" secondAttribute="top" constant="10" id="mV4-kA-vYk"/>
+                        <constraint firstAttribute="bottom" secondItem="E6v-Es-9fa" secondAttribute="bottom" constant="10" id="rQP-GG-uRA"/>
+                    </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="corner">
+                            <real key="value" value="10"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </view>
             </subviews>
-            <color key="backgroundColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="vbz-aq-1oD" firstAttribute="top" secondItem="E6v-Es-9fa" secondAttribute="bottom" constant="20" id="0rV-QE-y41"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="ovH-G4-5hP" secondAttribute="trailing" constant="20" id="12q-Ax-9fn"/>
+                <constraint firstItem="ovH-G4-5hP" firstAttribute="top" secondItem="yvr-1C-71T" secondAttribute="bottom" constant="20" id="4K6-4g-yGg"/>
                 <constraint firstItem="vbz-aq-1oD" firstAttribute="leading" secondItem="s5f-VL-M45" secondAttribute="trailing" constant="20" id="4rL-Rn-pOa"/>
                 <constraint firstItem="vbz-aq-1oD" firstAttribute="width" secondItem="s5f-VL-M45" secondAttribute="width" id="66h-at-3ok"/>
+                <constraint firstItem="s5f-VL-M45" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="7LZ-IT-V60"/>
+                <constraint firstItem="vbz-aq-1oD" firstAttribute="top" secondItem="ovH-G4-5hP" secondAttribute="bottom" constant="20" id="8K3-Si-c84"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="s5f-VL-M45" secondAttribute="bottom" constant="20" id="BCy-ja-5wA"/>
-                <constraint firstItem="vbz-aq-1oD" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" multiplier="1.5" id="DNL-a8-fgi"/>
-                <constraint firstItem="s5f-VL-M45" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" multiplier="0.5" id="Fao-eM-fqF"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="E6v-Es-9fa" secondAttribute="trailing" constant="20" id="RLJ-ov-V82"/>
-                <constraint firstItem="E6v-Es-9fa" firstAttribute="top" secondItem="yvr-1C-71T" secondAttribute="bottom" constant="20" id="b2S-8C-Fyb"/>
-                <constraint firstItem="E6v-Es-9fa" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="iYc-67-yKQ"/>
+                <constraint firstItem="yvr-1C-71T" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="MLq-W6-DhS"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="vbz-aq-1oD" secondAttribute="trailing" constant="20" id="PRi-ju-hOf"/>
+                <constraint firstItem="ovH-G4-5hP" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="T8S-IB-Peb"/>
                 <constraint firstItem="yvr-1C-71T" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="20" id="rui-vy-XLN"/>
-                <constraint firstItem="yvr-1C-71T" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="sDZ-pP-1YJ"/>
                 <constraint firstItem="vbz-aq-1oD" firstAttribute="centerY" secondItem="s5f-VL-M45" secondAttribute="centerY" id="tXL-ll-gEk"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -105,7 +124,7 @@
                 <outlet property="sure_button" destination="s5f-VL-M45" id="rOv-YP-5nv"/>
                 <outlet property="title_label" destination="yvr-1C-71T" id="QYf-BB-QI9"/>
             </connections>
-            <point key="canvasLocation" x="6" y="103"/>
+            <point key="canvasLocation" x="5.5" y="78"/>
         </view>
     </objects>
 </document>
